--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#hero" class="active">Beranda</a></li>
           <li><a href="#about">Tentang</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#cfp">CFP</a></li>
+          <li><a href="#tim">Tim</a></li>
           </li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -74,22 +73,20 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
+    <!-- Tentang -->
     <section id="about" class="about section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span>AWS Community Day Indonesia 2024<br></span> <span class="description-title">AWS User Group Indonesia<br></span></p>
+        <p><span>Selamat Datang!</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-5">
-
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
-            <h3>Selamat Datang!</h3>
             <p>
-              Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia komputasi awan yang ditawarkan oleh Amazon Web Services (AWS). <br>
+              Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia komputasi awan yang ditawarkan oleh Amazon Web Services (AWS). <br><br>
               Bergabunglah bersama kami untuk mengikuti sesi yang penuh wawasan, diskusi yang menarik, lokakarya praktis, dan peluang berjejaring, yang semuanya dirancang untuk memperluas pengetahuan dan kemahiran Anda dalam memanfaatkan solusi AWS.
 
             </p>
@@ -131,87 +128,11 @@
 
     </section><!-- /About Section -->
 
+    <!-- Hitung Mundur -->
 
-    <!-- Call To Action Section -->
+    <!-- Call for Speaker -->
 
-    <!-- Portfolio Section -->
-
-    <!-- Pricing Section -->
-
-    <!-- Faq Section -->
-    <section id="faq" class="faq section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <p><span>Pertanyaan yang Sering Diajukan</span></p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row justify-content-center">
-
-          <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="faq-container">
-
-              <div class="faq-item faq-active">
-                <h3>Apa itu AWS Community Day?</h3>
-                <div class="faq-content">
-                  <p>AWS Community Day adalah acara yang diselenggarakan oleh komunitas AWS untuk komunitas. Ini adalah kesempatan bagi pengguna AWS untuk berkumpul dan belajar satu sama lain, berbagi praktik terbaik, serta mendengarkan presentasi dari para ahli di industri.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Siapa yang bisa berpartisipasi dalam acara ini?</h3>
-                <div class="faq-content">
-                  <p>AWS Community Day terbuka untuk semua pengguna AWS yang tertarik, tanpa memandang tingkat keahlian.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Apakah perlu mendaftar untuk berpartisipasi dalam acara ini?</h3>
-                <div class="faq-content">
-                  <p>Ya, pendaftaran diperlukan untuk bisa berpartisipasi dalam acara ini. Silakan mendaftar melalui situs web acara.
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Apakah ada biaya terkait dengan partisipasi dalam acara ini?</h3>
-                <div class="faq-content">
-                  <p>Tidak, partisipasi dalam AWS Community Day gratis.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Di mana acara ini akan diadakan?</h3>
-                <div class="faq-content">
-                  <p>Acara ini akan diadakan di TBD.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Bagaimana cara menjadi sponsor?</h3>
-                <div class="faq-content">
-                  <p>Kirimkan email langsung ke awsugid@gmail.com. Kami akan mengirimkan paket sponsor kami yang berisi informasi detail tentang tingkat sponsorship dan manfaatnya.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-            </div>
-
-          </div><!-- End Faq Column-->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Faq Section -->
+    <!-- Agenda -->
 
     <!-- Team Section -->
     <section id="team" class="team section">
@@ -303,6 +224,81 @@
 
     </section><!-- /Team Section -->
 
+    <!-- Faq Section -->
+    <section id="faq" class="faq section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p><span>Pertanyaan yang Sering Diajukan</span></p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row justify-content-center">
+
+          <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="faq-container">
+
+              <div class="faq-item faq-active">
+                <h3>Apa itu AWS Community Day?</h3>
+                <div class="faq-content">
+                  <p>AWS Community Day adalah acara yang diselenggarakan oleh komunitas AWS untuk komunitas. Ini adalah kesempatan bagi pengguna AWS untuk berkumpul dan belajar satu sama lain, berbagi praktik terbaik, serta mendengarkan presentasi dari para ahli di industri.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>Siapa yang bisa berpartisipasi dalam acara ini?</h3>
+                <div class="faq-content">
+                  <p>AWS Community Day terbuka untuk semua pengguna AWS yang tertarik, tanpa memandang tingkat keahlian.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>Apakah perlu mendaftar untuk berpartisipasi dalam acara ini?</h3>
+                <div class="faq-content">
+                  <p>Ya, pendaftaran diperlukan untuk bisa berpartisipasi dalam acara ini. Silakan mendaftar melalui situs web acara.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>Apakah ada biaya terkait dengan partisipasi dalam acara ini?</h3>
+                <div class="faq-content">
+                  <p>Tidak, partisipasi dalam AWS Community Day gratis.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>Di mana acara ini akan diadakan?</h3>
+                <div class="faq-content">
+                  <p>Acara ini akan diadakan di TBD.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>Bagaimana cara menjadi sponsor?</h3>
+                <div class="faq-content">
+                  <p>Kirimkan email langsung ke awsugid@gmail.com. Kami akan mengirimkan paket sponsor kami yang berisi informasi detail tentang tingkat sponsorship dan manfaatnya.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+            </div>
+
+          </div><!-- End Faq Column-->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Faq Section -->
+
   </main>
 
   <footer id="footer" class="footer dark-background">
@@ -327,7 +323,7 @@
           <ul>
             <li><a href="#">Beranda</a></li>
             <li><a href="#">Bergabung dengan kami</a></li>
-            <li><a href="#">Code of Conduct</a></li>
+            <li><a href="#coc.html">Kode Etik</a></li>
           </ul>
         </div>
 
