--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>AWS Community Day<br>Indonesia 2024</h2>
+            <h2>AWS Community Day Indonesia 2024</h2>
             <p>23 November 2024</p>
             <a href="#about" class="btn-get-started">Mulai</a>
           </div>
