--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
         <div class="row gy-5">
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
+            <br><br>
             <p>
               Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia komputasi awan yang ditawarkan oleh Amazon Web Services (AWS). <br><br>
               Bergabunglah bersama kami untuk mengikuti sesi yang penuh wawasan, diskusi yang menarik, lokakarya praktis, dan peluang berjejaring, yang semuanya dirancang untuk memperluas pengetahuan dan kemahiran Anda dalam memanfaatkan solusi AWS.
@@ -159,7 +160,7 @@
               </div>
               <div class="member-info">
                 <h4>Ananda Dwi Rahmawati</h4>
-                <span>AWS Container Hero 2024</span>
+                <span>AWS Container Hero</span>
               </div>
             </div>
           </div><!-- End Team Member -->
