--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
             <div class="faq-container">
 
-              <div class="faq-item faq-active">
+              <div class="faq-item">
                 <h3>Apa itu AWS Community Day?</h3>
                 <div class="faq-content">
                   <p>AWS Community Day adalah acara yang diselenggarakan oleh komunitas AWS untuk komunitas. Ini adalah kesempatan bagi pengguna AWS untuk berkumpul dan belajar satu sama lain, berbagi praktik terbaik, serta mendengarkan presentasi dari para ahli di industri.</p>
