--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Tempo</h1>
+        <img src="assets/img/logo.png" alt="AWS User Group Indonesia">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -46,7 +45,7 @@
           <li><a href="#cfp">CFP</a></li>
           <li><a href="#tim">Tim</a></li>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Kontak</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -87,9 +86,8 @@
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
             <br><br>
             <p>
-              Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia komputasi awan yang ditawarkan oleh Amazon Web Services (AWS). <br><br>
-              Bergabunglah bersama kami untuk mengikuti sesi yang penuh wawasan, diskusi yang menarik, lokakarya praktis, dan peluang berjejaring, yang semuanya dirancang untuk memperluas pengetahuan dan kemahiran Anda dalam memanfaatkan solusi AWS.
-
+              Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia cloud computing yang ditawarkan oleh Amazon Web Services (AWS). <br><br>
+              Bergabunglah bersama kami untuk mengikuti sesi yang penuh wawasan, diskusi menarik, lokakarya praktis, dan peluang berjejaring, yang semuanya dirancang untuk memperluas pengetahuan dan kemahiran Anda dalam memanfaatkan solusi AWS.
             </p>
           </div>
 
