--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         <ul>
           <li><a href="#hero" class="active">Beranda</a></li>
           <li><a href="#about">Tentang</a></li>
-          <li><a href="#cfp">CFP</a></li>
-          <li><a href="#tim">Tim</a></li>
+          <li><a href="#speaker">Speaker</a></li>
+          <li><a href="#agenda">Agenda</a></li>
+          <li><a href="#sponsor">Sponsor</a></li>
+          <li><a href="#team">Tim Komunitas</a></li>
           </li>
-          <li><a href="#contact">Kontak</a></li>
+          <li><a href="#faq">FAQ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -77,7 +79,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span>Selamat Datang!</span></p>
+        <p><span class="description-title">Selamat Datang!</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -127,33 +129,123 @@
 
     </section><!-- /About Section -->
 
-    <!-- Hitung Mundur -->
+<!-- Hitung Mundur -->
+<section id="hitung" class="hitung section">
 
-    <!-- Call for Speaker -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <p><span class="description-title">Hitung Mundur</span></p>
+  </div><!-- End Section Title -->
+
+  <!-- Countdown Timer -->
+  <div class="container">
+    <div id="countdown" class="countdown">
+      <div class="countdown-box">
+        <span id="days"></span>
+        <p>Hari</p>
+      </div>
+      <div class="countdown-box">
+        <span id="hours"></span>
+        <p>Jam</p>
+      </div>
+      <div class="countdown-box">
+        <span id="minutes"></span>
+        <p>Menit</p>
+      </div>
+      <div class="countdown-box">
+        <span id="seconds"></span>
+        <p>Detik</p>
+      </div>
+    </div>
+  </div><!-- End Countdown Timer -->
+
+</section><!-- /Hitung Section -->
+
+<script>
+  // Set the date we're counting down to
+  var countDownDate = new Date("Nov 23, 2024 00:00:00").getTime();
+
+  // Update the count down every 1 second
+  var x = setInterval(function() {
+
+    // Get today's date and time
+    var now = new Date().getTime();
+
+    // Find the distance between now and the count down date
+    var distance = countDownDate - now;
+
+    // Time calculations for days, hours, minutes and seconds
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+    // Output the result in an element with id="countdown"
+    document.getElementById("days").innerText = days;
+    document.getElementById("hours").innerText = hours;
+    document.getElementById("minutes").innerText = minutes;
+    document.getElementById("seconds").innerText = seconds;
+
+    // If the count down is over, write some text
+    if (distance < 0) {
+      clearInterval(x);
+      document.getElementById("countdown").innerHTML = "EXPIRED";
+    }
+  }, 1000);
+</script>
+
+
+    <!-- Speakers -->
+    <section id="speaker" class="speaker section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p><span class="description-title">Speakers</span></p>
+      </div><!-- End Section Title -->
+
+    </section><!-- /Speakers Section -->
 
     <!-- Agenda -->
+    <section id="agenda" class="agenda section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p><span class="description-title">Agenda</span></p>
+      </div><!-- End Section Title -->
+
+    </section><!-- /Agenda Section -->
+
+    <!-- Sponsor -->
+    <section id="sponsor" class="sponsor section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p><span class="description-title">Sponsors</span></p>
+      </div><!-- End Section Title -->
+
+    </section><!-- /Sponsor Section -->
 
     <!-- Team Section -->
     <section id="team" class="team section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span>Tim Komunitas</span></p>
+        <p><span class="description-title">Tim Komunitas</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/ananda.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/anandadwir/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -163,15 +255,33 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="160">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/albert.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/albertsuwandhi/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Albert Suwandhi</h4>
+                <span>AWS Community Hero</span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="240">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/team/azmi.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/azmifaizh/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -181,15 +291,15 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="320">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/dimas.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/dimas-khosyi-triangga-852b641a2/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -202,21 +312,20 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/ananta.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/anantafatur/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Muhammad Ananta Faturrahman</h4>
-                <span>AWS Cloud Club Captain Indonesia</span>
+                <h4> Muhammad Ananta Faturrahman</h4>
+                <span>Captain of AWS Cloud Club Indonesia</span>
               </div>
             </div>
           </div><!-- End Team Member -->
-
         </div>
 
       </div>
@@ -228,7 +337,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span>Pertanyaan yang Sering Diajukan</span></p>
+        <p><span class="description-title">Pertanyaan yang Sering Diajukan</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
