--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/ananda.png" class="img-fluid" alt="">
+                <img src="assets/img/team/ananda.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
