--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
               <div class="faq-item">
                 <h3>Apakah ada biaya terkait dengan partisipasi dalam acara ini?</h3>
                 <div class="faq-content">
-                  <p>Tidak, partisipasi dalam AWS Community Day gratis.</p>
+                  <p>Biaya pendaftaran untuk berpartisipasi di acara ini sebesar Rp50.000.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
