add new content

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="container section-title" data-aos="fade-up">
         <p>Agenda</p>
       </div><!-- End Section Title -->
-
+      
     </section><!-- /Agenda Section -->
 
     <!-- Sponsor -->
@@ -495,7 +495,7 @@
           <h4>Kontak Kami</h4>
           <p>AWS User Group Indonesia</p>
           <p class="mt-4"><strong>Phone:</strong> <span>+62 8525 9044 226</span></p>
-          <p><strong>Email:</strong> <span>ananda.dwirahmawati313@gmail.com</span></p>
+          <p><strong>Email:</strong> <span>awsugid@gmail.com</span></p>
         </div>
 
       </div>
