add new content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="#speaker">Speaker</a></li>
           <li><a href="#agenda">Agenda</a></li>
           <li><a href="#sponsor">Sponsor</a></li>
-          <li><a href="#team">Tim Komunitas</a></li>
+          <li><a href="#team">Tim</a></li>
           </li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
@@ -225,10 +225,10 @@
           <h3><center>Platinum</center></h3>
           <div class="row">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 1" class="img-fluid" style="max-width: 80%;">
+              <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 1" class="img-fluid" style="max-width: 60%;">
             </div>
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 2" class="img-fluid" style="max-width: 80%;">
+              <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 2" class="img-fluid" style="max-width: 60%;">
             </div>
           </div>
         </div><!-- End Platinum Sponsors -->
@@ -240,13 +240,13 @@
           <h3><center>Gold</center></h3>
           <div class="row">
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 1" class="img-fluid" style="max-width: 60%;">
+              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 1" class="img-fluid" style="max-width: 50%;">
             </div>
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 2" class="img-fluid" style="max-width: 60%;">
+              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 2" class="img-fluid" style="max-width: 50%;">
             </div>
             <div class="col-lg-4 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 3" class="img-fluid" style="max-width: 60%;">
+              <img src="assets/img/sponsor/sponsor.png" alt="Gold Sponsor 3" class="img-fluid" style="max-width: 50%;">
             </div>
           </div>
         </div><!-- End Gold Sponsors -->
@@ -274,12 +274,40 @@
         </section>
     </section>
 
+    <!-- Partner Komunitas -->
+    <section id="komunitas" class="komunitas section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p>Komunitas</p>
+      </div><!-- End Section Title -->      
+        <section>
+            <!-- Silver Sponsors -->
+            <div class="container sponsor-category silver-sponsors" data-aos="fade-up">
+              <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
+                  <img src="assets/img/community/community.png" alt="Silver Sponsor 1" class="img-fluid" style="max-width: 30%;">
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
+                  <img src="assets/img/community/community.png" alt="Silver Sponsor 2" class="img-fluid" style="max-width: 30%;">
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
+                  <img src="assets/img/community/community.png" alt="Silver Sponsor 3" class="img-fluid" style="max-width: 30%;">
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
+                  <img src="assets/img/community/community.png" alt="Silver Sponsor 4" class="img-fluid" style="max-width: 30%;">
+                </div>
+              </div>
+            </div><!-- Partner Komunitas-->
+        </section>
+    </section>
+
     <!-- Team Section -->
     <section id="team" class="team section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span class="description-title">Tim Komunitas</span></p>
+        <p><span class="description-title">Tim</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
